feat: implement unit cost in raw materials and update production optimization logic